--- a/main_page.html
+++ b/main_page.html
@@ -6,7 +6,19 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1><center>Locations</center></h1>
+	<div align="right">
+			<button class="button1" type="button" title="Profile" align="right">Profile</button>
+			<h1><center>Locations</center></h1>
+		</div>
+		<div>
+			<div>
+				<img alt="North Dining Hall" class=".center" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img>
+				hello
+			</div>
+		<br></br>
+		<img alt="South Dining Hall" class=".center" src="https://i.ibb.co/FwMZPWN/OIP-1.jpg"></img>
+	</div>
+	<button class="button2" align="center">DINE NOW</button>
+
 	</body>
 </html>
-
